force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <description>Allocation of a resource to an engagement over a date range at a given percentage. Overlaps trigger asynchronous conflict detection.</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>ASN-{0000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>