force-app/main/default/objects/Assignment__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <defaultValue>100</defaultValue>
    <description
  >Percent of the resource&apos;s capacity allocated by this assignment.</description>
    <label>Allocation Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>