force-app/main/default/objects/Assignment__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Engagement the resource is allocated to.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>