force-app/main/default/objects/Assignment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Resource being allocated.</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>